[gd_scene load_steps=8 format=3 uid="uid://c6rqwt4ygjtet"]

[ext_resource type="Script" path="res://scripts/main_screen.gd" id="1_npoeq"]
[ext_resource type="PackedScene" uid="uid://bu7it3f67seh7" path="res://scenes/level_2.tscn" id="2_l3yfm"]
[ext_resource type="Texture2D" uid="uid://bvs70hi7j8ur7" path="res://assets/IMG_3583.PNG" id="3_4hh33"]
[ext_resource type="Texture2D" uid="uid://cg3hookt0pyii" path="res://assets/IMG_3586.PNG" id="4_hc7qk"]
[ext_resource type="Texture2D" uid="uid://4skp7oi0ccl2" path="res://assets/IMG_3584.PNG" id="5_da3i0"]
[ext_resource type="Texture2D" uid="uid://py6uqxroruth" path="res://assets/IMG_3585.PNG" id="6_jp68g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_48ro6"]
size = Vector2(863, 249)

[node name="MainScreen" type="Node2D"]
script = ExtResource("1_npoeq")
level1 = ExtResource("2_l3yfm")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("3_4hh33")

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(951, 546)
texture = ExtResource("4_hc7qk")

[node name="Start" type="Sprite2D" parent="."]
position = Vector2(960, 541)
texture = ExtResource("5_da3i0")

[node name="Start_Hover" type="Sprite2D" parent="."]
visible = false
position = Vector2(960, 543)
texture = ExtResource("6_jp68g")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(656, 622)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(257.5, 236.5)
shape = SubResource("RectangleShape2D_48ro6")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
